--- a/.env-backend-acme
+++ b/.env-backend-acme
@@ -1,5 +1,5 @@
-FRONTEND_HOST=ticketz.exemplo.com.br
-EMAIL_ADDRESS=ticketz@exemplo.com.br
+FRONTEND_HOST=app.ionchat.online
+EMAIL_ADDRESS=api.ionchat.online
 TZ=America/Sao_Paulo
 
 # Normalmente não é necessário alterar estes valores
