--- a/.env-frontend-acme
+++ b/.env-frontend-acme
@@ -1,5 +1,5 @@
-FRONTEND_HOST=ticketz.exemplo.com.br
-EMAIL_ADDRESS=ticketz@exemplo.com.br
+FRONTEND_HOST=app.ionchat.online
+EMAIL_ADDRESS=jplabadessa@gmail.com
 
 ### Normalmente não é necessário alterar estes valores
 
